# uwtec-usv

./: .gitignore
uwtec_cart/: CMakeLists.txt  package.xml  uwtec_cart.xml
uwtec_cart/config/: micro.config.yaml  ros_gz_bridge_params.yaml  twist_mux.yaml  uwtec_cart_controller.yaml  uwtec_cart_gazebo_controller.yaml
uwtec_cart/hardware/include/uwtec_cart/: uwtec_cart_system.hpp
uwtec_cart/hardware/src/: uwtec_cart_system.cpp
uwtec_cart/launch/: joystick.launch.py  robot_state_publisher.launch.py  uwtec_cart.launch.py  uwtec_cart_gazebo.launch.py
uwtec_cart/rviz/: lab.042.uwtec_cart.rviz  uwtec_cart_basic.rviz  uwtec_cart_gazebo.rviz
uwtec_cart/urdf/: uwtec_cart.urdf.xacro  uwtec_cart_gazebo.urdf.xacro  uwtec_cart_ros2_control.urdf.xacro
uwtec_cart/uwtec_cart/: cmd_vel_mux.py
uwtec_cart/worlds/: cafe.world  empty.sdf  empty.world  house.world  pick_and_place_demo.world
uwtec_gnss/: package.xml  setup.cfg  setup.py
uwtec_gnss/config/: gnss.yaml
uwtec_gnss/uwtec_gnss/: mpu6050_driver.py  mpu6050_publisher.py  um982_configurator.py  um982_driver.py  um982_publisher.py  um982_rtk_checker.py
uwtec_gnss/uwtec_gnss/utils/: nmea_util.py
uwtec_nav/: package.xml  setup.cfg  setup.py
uwtec_nav/config/: dual_ekf_navsat_params.yaml  nav2_no_map_params.yaml  songsanri_wps.yaml  uwtec_wps.yaml
uwtec_nav/launch/: localization.launch.py  nav2.launch.py
uwtec_nav/uwtec_nav/: collect_coords.py  custom_gps_topic.py  distance_and_bearing.py  go_dancing.py  gps_fix_and_utmpos_topic.py  nav_to_waypoints.py  shuttle_run.py  turn_around.py
uwtec_nav/uwtec_nav/tmp/: gps_demo_03.py  gps_demo_04.py  gps_demo_05.py  gps_waypoint_logger.py  lab.011.cart_demo.py  lab.012.cart_demo.py  logged_waypoint_follower.py  test.03.go_dancing.py  test.03.turn_around.py  test.04.go_straight.py  test.05.find_direction.py  test.06.nav_to_goal.py  test_calc.py
uwtec_nav/uwtec_nav/utils/: gps_utils.py  heading_utils.py
uwtec_usv/: CMakeLists.txt  package.xml
